# idesolver

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  covtest.py  index.html  make_figs.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  synthfile
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  publish-docs.yml  publish-package.yml  publish-to-pypi.yml  publish.yml  quality-check.yml  tests.yml
api/: index.html
changelog/: index.html
contributing/: index.html
dev/: Gelmi2014.py  complex_valued.py  convergence.py  parallel.py
docs/: Makefile  api.md  changelog.md  contributing.md  index.html  index.md  make.bat  make_figs.py  manual.md  parallelization.md  quickstart.md  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  faq.rst  index.rst  manual.rst  quickstart.rst
idesolver/: __init__.py  constants.py  exceptions.py  idesolver.py  version.py
manual/: index.html
paper/: paper.bib  paper.md
parallelization/: index.html
quickstart/: index.html
search/: search_index.json
src/idesolver/: __init__.py  idesolver.py  solver.py
tests/: conftest.py  test_against_analytic_solutions.py  test_complex_quad.py  test_complex_valued.py  test_complex_valued_ide.py  test_constructor_checks.py  test_ide_basics.py  test_ides_from_Gelmi2014.py  test_ides_with_analytic_solutions.py  test_misc.py  test_solver_against_analytic_solutions.py  test_solver_constructor_checks.py  test_version.py
