[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "idesolver"
version = "2.0.0"
description = "A general purpose iterative numeric integro-differential equation (IDE) solver"
readme = "README.md"
homepage = "https://github.com/JoshKarpel/idesolver"
repository = "https://github.com/JoshKarpel/idesolver"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
authors = ["JoshKarpel <josh.karpel@gmail.com>"]
license = "GPL-3.0"
include = []

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.18"
scipy = ">=1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = ">=7"
pytest-mock = ">=3"
pytest-cov = ">=3"
pytest-xdist = ">=3"
hypothesis = ">=6"
sphinx = ">=6"
sphinx-rtd-theme = ">=1"
sphinx-autodoc-typehints = ">=1"
sphinx-issues = ">=3"

[tool.black]
line-length = 100
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.pycln]
all = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-n", "auto"]
testpaths = ["tests", "idesolver", "docs"]
