[metadata]
name = idesolver
version = 1.0.4
author = Josh Karpel
author_email = karpel@wisc.edu
maintainer = Josh Karpel
maintainer_email = karpel@wisc.edu
description = A general purpose iterative numeric integro-differential equation (IDE) solver
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/JoshKarpel/idesolver
license = GPL v3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18
    scipy>=1.4
    importlib-metadata ~= 1.0; python_version < "3.8"

[options.extras_require]
tests =
    pytest
    pytest-xdist
    pytest-mock
    pytest-cov
    hypothesis
    coverage
    pytest-cov
    codecov
    pre-commit
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autodoc_typehints

[bdist_wheel]
universal = 1
