[metadata]
name = idesolver
version = 1.1.0
description = A general purpose iterative numeric integro-differential equation (IDE) solver
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/JoshKarpel/idesolver
author = Josh Karpel
author_email = karpel@wisc.edu
maintainer = Josh Karpel
maintainer_email = karpel@wisc.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    numpy>=1.18
    scipy>=1.4
    importlib-metadata>=1.0;python_version < "3.8"
python_requires = >=3.7

[options.extras_require]
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-issues
    sphinx-rtd-theme
tests =
    coverage>=6
    hypothesis>=5.41
    pytest>=7.1
    pytest-cov>=3
    pytest-mock>=3

[bdist_wheel]
universal = 1
